# gstfs

./: Makefile.am  all2m4v.sh  configure.ac  flect.c  flect.h  gstfs.c  xcode.c
